# fake-review-detector

./: README.md
fake-review-detector-api/: Dockerfile  db.sqlite3  manage.py  pyproject.toml
fake-review-detector-api/fake_review_detector_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
fake-review-detector-api/fake_review_detector_api/templates/: base.html
fake-review-detector-api/fake_review_detector_api/tests/: test_cases.py
training_script/: fake-review-detector.ipynb  pyproject.toml
