[tool.poetry]
name = "training_script"
version = "0.1.0"
description = ""
authors = ["Ibrahim Haji Abdi <ibrahim.hajiabdi09@gmail.com>"]
packages = [{include = "training_script"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
transformers = ">=4.39.3"
torch = ">=2.1.2"
numpy = ">=1.26.4"
datasets = ">=2.19.0"
pandas = ">=2.2.1"
evaluate = ">=0.4.1"
accelerate = ">=0.29.3"
ipython = "^8.31.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"